// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Operational Solutions Add Subtasks > matches snapshot 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb usa-breadcrumb--wrap"
  >
    <ol
      class="usa-breadcrumb__list"
    >
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area"
        >
          <span>
            Model collaboration area
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list"
        >
          <span>
            Model Plan task list
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions"
        >
          <span>
            Operational solutions and implementation status tracker
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/undefined/undefined/solution-details"
        >
          <span>
            Solution details
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        class="usa-breadcrumb__list-item usa-current"
      >
        <span>
          Add subtask
        </span>
      </li>
    </ol>
  </nav>
  <div
    class="grid-row grid-gap"
    data-testid="grid"
  >
    <div
      class="tablet:grid-col-9"
      data-testid="grid"
    >
      <h1
        aria-live="polite"
        class="mint-h1 margin-top-4 margin-bottom-2"
        tabindex="-1"
      >
        Add subtask
      </h1>
      <p
        class="margin-top-0 margin-bottom-1 font-body-lg"
        data-testid="model-plan-name"
      >
        for 
      </p>
      <p
        class="line-height-body-4"
      >
        Add important subtasks to stay organized throughout the implementation process.
      </p>
      <div
        class="tablet:grid-col-12 desktop:grid-col-8"
        data-testid="grid"
      >
        <span
          aria-valuetext="Loading"
          class="mint-spinner mint-spinner--large center"
          data-testid="needs-spinner"
          role="progressbar"
        />
        <form
          action="#"
          class="margin-top-6"
          data-testid="add-subtask-form"
        >
          <fieldset
            class="usa-fieldset"
            data-testid="fieldset"
          >
            <div
              class=""
              data-testid="add-subtask--0"
            >
              <div
                class="usa-form-group margin-top-4"
                data-scroll="name"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[0].name"
                >
                  Subtask name
                  <span
                    aria-label="(Field required)"
                    class="text-red margin-x-05"
                  >
                    *
                  </span>
                </label>
                <input
                  class="usa-input"
                  data-testid="subtask-name--0"
                  id="subtask-name--0"
                  maxlength="50"
                  name="subtasks[0].name"
                  value=""
                />
              </div>
              <div
                class="usa-form-group margin-top-4"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[0].status"
                >
                  What is the status of this subtask?
                </label>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    checked=""
                    class="usa-radio__input"
                    id="subtask-status--0--TODO"
                    name="subtasks[0].status"
                    type="radio"
                    value="TODO"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--TODO"
                  >
                    To do
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--IN_PROGRESS"
                    name="subtasks[0].status"
                    type="radio"
                    value="IN_PROGRESS"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--IN_PROGRESS"
                  >
                    In progress
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--DONE"
                    name="subtasks[0].status"
                    type="radio"
                    value="DONE"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--DONE"
                  >
                    Done
                  </label>
                </div>
              </div>
            </div>
            <div
              class="margin-top-3"
            >
              <button
                class="usa-button usa-button--outline"
                data-testid="button"
                id="add-another-subtask"
                type="button"
              >
                Add another subtask
              </button>
            </div>
          </fieldset>
          <div
            class="margin-top-6 margin-bottom-3"
          >
            <button
              class="usa-button"
              data-testid="button"
              disabled=""
              id="submit-subtasks"
              type="submit"
            >
              Add subtask
            </button>
          </div>
          <button
            class="usa-button usa-button usa-button--unstyled display-flex flex-align-center margin-bottom-6"
            data-testid="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-1"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t add subtask and return to solution details
          </button>
        </form>
      </div>
    </div>
    <div
      class="desktop:grid-col-3 padding-x-1"
      data-testid="grid"
    >
      <div
        class="border-top-05 border-primary-lighter padding-top-2 margin-top-4"
      >
        <div>
          <div
            class="padding-2 bg-primary-lighter display-flex flex-wrap flex-justify flex-align-center"
            style="gap: 1rem;"
          >
            <p
              class="text-bold margin-0"
            >
              Don’t know what to do next?
            </p>
            <div
              class="display-flex"
              data-testid="ask-a-question"
            >
              <svg
                class="usa-icon text-primary margin-right-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 9h-2V5h2v6zm0 4h-2v-2h2v2z"
                />
              </svg>
              <button
                class="usa-button usa-button--unstyled"
                data-testid="ask-a-question-button"
                type="button"
              >
                Start a discussion
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Operational Solutions Manage Subtasks > matches snapshot 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumbs"
    class="usa-breadcrumb usa-breadcrumb--wrap"
  >
    <ol
      class="usa-breadcrumb__list"
    >
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area"
        >
          <span>
            Model collaboration area
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list"
        >
          <span>
            Model Plan task list
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions"
        >
          <span>
            Operational solutions and implementation status tracker
          </span>
        </a>
      </li>
      <li
        class="usa-breadcrumb__list-item"
      >
        <a
          class="usa-link usa-breadcrumb__link"
          href="/models/ce3405a0-3399-4e3a-88d7-3cfc613d2905/collaboration-area/task-list/it-solutions/undefined/undefined/solution-details"
        >
          <span>
            Solution details
          </span>
        </a>
      </li>
      <li
        aria-current="page"
        class="usa-breadcrumb__list-item usa-current"
      >
        <span>
          Manage subtasks
        </span>
      </li>
    </ol>
  </nav>
  <div
    class="grid-row grid-gap"
    data-testid="grid"
  >
    <div
      class="tablet:grid-col-9"
      data-testid="grid"
    >
      <h1
        aria-live="polite"
        class="mint-h1 margin-top-4 margin-bottom-2"
        tabindex="-1"
      >
        Manage subtasks
      </h1>
      <p
        class="margin-top-0 margin-bottom-1 font-body-lg"
        data-testid="model-plan-name"
      >
        for 
      </p>
      <p
        class="line-height-body-4"
      >
        Track the status of your subtasks throughout the implementation process to stay organized.
      </p>
      <div
        class="tablet:grid-col-12 desktop:grid-col-8"
        data-testid="grid"
      >
        <span
          aria-valuetext="Loading"
          class="mint-spinner mint-spinner--large center"
          data-testid="needs-spinner"
          role="progressbar"
        />
        <form
          action="#"
          class="margin-top-6"
          data-testid="manage-subtask-form"
        >
          <fieldset
            class="usa-fieldset"
            data-testid="fieldset"
          >
            <div
              class="border-bottom border-base-light"
              data-testid="manage-subtasks--0"
            >
              <div
                class="margin-top-4"
              >
                <p
                  class="usa-label margin-0"
                >
                  Subtask name
                </p>
                <p
                  class="margin-0"
                >
                  First Subtask
                </p>
              </div>
              <div
                class="usa-form-group margin-top-4"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[0].status"
                >
                  What is the status of this subtask?
                </label>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    checked=""
                    class="usa-radio__input"
                    id="subtask-status--0--TODO"
                    name="subtasks[0].status"
                    type="radio"
                    value="TODO"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--TODO"
                  >
                    To do
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--IN_PROGRESS"
                    name="subtasks[0].status"
                    type="radio"
                    value="IN_PROGRESS"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--IN_PROGRESS"
                  >
                    In progress
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--0--DONE"
                    name="subtasks[0].status"
                    type="radio"
                    value="DONE"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--0--DONE"
                  >
                    Done
                  </label>
                </div>
                <button
                  class="usa-button usa-button usa-button--unstyled line-height-body-5 text-red margin-y-3"
                  data-testid="button"
                  type="button"
                >
                  Remove this subtask
                </button>
              </div>
            </div>
            <div
              class="border-bottom border-base-light"
              data-testid="manage-subtasks--1"
            >
              <div
                class="margin-top-4"
              >
                <p
                  class="usa-label margin-0"
                >
                  Subtask name
                </p>
                <p
                  class="margin-0"
                >
                  Second Subtask
                </p>
              </div>
              <div
                class="usa-form-group margin-top-4"
              >
                <label
                  class="usa-label"
                  data-testid="label"
                  for="subtasks[1].status"
                >
                  What is the status of this subtask?
                </label>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--1--TODO"
                    name="subtasks[1].status"
                    type="radio"
                    value="TODO"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--1--TODO"
                  >
                    To do
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    class="usa-radio__input"
                    id="subtask-status--1--IN_PROGRESS"
                    name="subtasks[1].status"
                    type="radio"
                    value="IN_PROGRESS"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--1--IN_PROGRESS"
                  >
                    In progress
                  </label>
                </div>
                <div
                  class="usa-radio"
                  data-testid="radio"
                >
                  <input
                    checked=""
                    class="usa-radio__input"
                    id="subtask-status--1--DONE"
                    name="subtasks[1].status"
                    type="radio"
                    value="DONE"
                  />
                  <label
                    class="usa-radio__label"
                    for="subtask-status--1--DONE"
                  >
                    Done
                  </label>
                </div>
                <button
                  class="usa-button usa-button usa-button--unstyled line-height-body-5 text-red margin-y-3"
                  data-testid="button"
                  type="button"
                >
                  Remove this subtask
                </button>
              </div>
            </div>
            <div
              class="margin-top-3"
            >
              <button
                class="usa-button usa-button--outline"
                data-testid="button"
                id="add-another-subtask"
                type="button"
              >
                Add another subtask
              </button>
            </div>
          </fieldset>
          <div
            class="margin-top-6 margin-bottom-3"
          >
            <button
              class="usa-button"
              data-testid="button"
              id="submit-subtasks"
              type="submit"
            >
              Update subtasks
            </button>
          </div>
          <button
            class="usa-button usa-button usa-button--unstyled display-flex flex-align-center margin-bottom-6"
            data-testid="button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="usa-icon margin-right-1"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t add subtask and return to solution details
          </button>
        </form>
      </div>
    </div>
    <div
      class="desktop:grid-col-3 padding-x-1"
      data-testid="grid"
    >
      <div
        class="border-top-05 border-primary-lighter padding-top-2 margin-top-4"
      >
        <div>
          <div
            class="padding-2 bg-primary-lighter display-flex flex-wrap flex-justify flex-align-center"
            style="gap: 1rem;"
          >
            <p
              class="text-bold margin-0"
            >
              Don’t know what to do next?
            </p>
            <div
              class="display-flex"
              data-testid="ask-a-question"
            >
              <svg
                class="usa-icon text-primary margin-right-1"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 9h-2V5h2v6zm0 4h-2v-2h2v2z"
                />
              </svg>
              <button
                class="usa-button usa-button--unstyled"
                data-testid="ask-a-question-button"
                type="button"
              >
                Start a discussion
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
